--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "Hangman_Game/Juego.js",
-  
   "scripts": {
     "start": "electron Hangman_Game/Juego.js"
   },
@@ -13,6 +12,7 @@
   "dependencies": {
     "electron": "^11.1.1",
     "electron-packager": "^15.2.0",
-    "electron-reload": "^1.5.0"
+    "electron-reload": "^1.5.0",
+    "jquery": "^3.6.0"
   }
 }
