--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "electron": "^11.1.1",
     "electron-packager": "^15.2.0",
     "electron-reload": "^1.5.0",
-    "jquery": "^3.6.0",
-    "synchronized-promise": "^0.3.1"
+    "jquery": "^3.6.0"
   }
 }
